<resources>
    <string name="app_name">ChatApp</string>
    <string name="app_key">1157230828175899#demo</string>
    <string name="edit_username">请输入用户账号</string>
    <string name="edit_password">请输入用户密码</string>
    <string name="edit_password_against">请再次输入密码</string>
    <string name="register_btn">注册</string>
    <string name="cancel_btn">取消</string>
    <string name="login_btn">登录</string>
    <string name="send_btn">发送</string>
    <string name="new_friend">新的朋友</string>
    <string name="chat_group">群聊</string>
    <string name="my_friend">我的朋友</string>
    <string name="btn_setting_logout">登出</string>
    <string name="txt_send_msg">发消息</string>
    <string name="txt_call_options">音视频通话</string>
</resources>